--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Asap&display=swap');
 
 :root {
-  --background: rgba(26, 25, 25, 0.15);
+  --background: rgb(26, 25, 25);
+  --background-nav: rgba(26, 25, 25, 0);
+  --main-color: rgb(199, 243, 134);
+  --table-color: rgb(51, 51, 49);
 }
 
 body {
@@ -12,17 +15,17 @@ body {
 }
 
 .content {
-  height: 150vh;
+  height: 80vh;
   background-image: url(img/code.background.jpg);
   background-blend-mode: multiply;
   background-size: cover;
   display: grid;
-  padding-top: 13%;
+  padding-top: 200px;
   place-items: top;
 }
 
 header {
-  background: var(--background);
+  background: var(--background-nav);
   text-align: center;
   position: fixed;
   z-index: 999;
@@ -107,7 +110,7 @@ nav a {
 }
 
 nav a:hover {
-  color: greenyellow;
+  color: var( --main-color);
 }
 
 .nav-toggle:checked ~ nav {
@@ -174,7 +177,7 @@ nav a:hover {
     content: '';
     display: block;
     height: 5px;
-    background: greenyellow;
+    background: var(--main-color);
     position: absolute;
     top: -.75em;
     left: 0;
@@ -195,4 +198,320 @@ h2{
     font-weight: 400;
     text-align: center;
 }
+
+.contact-invitation {
+  text-align: center;
+  margin:0;
+  padding-top: 0;
+  background-color: var(--background);
+}
+.contact-invitation h3 {
+  font-weight: 600;
+  font-size: 2em;
+  letter-spacing: 1px;
+  color: white;
+  margin-top: 0;
+ padding-top: 10%;
+}
+.contact-invitation a {
+  display: inline-block;
+  margin: 1em 1.5em 3em 1.5em;
+  padding: 0.75em 2.3em;
+  border: 1.5px solid white;
+  border-radius: 2em;
+  color: white;
+  font-size: 1.1em;
+  font-weight: 600;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+}
+.contact-invitation .contact {
+  background-color: white;
+  color: rgba(13, 25, 25);
+}
+
+ .contact-invitation a:hover {
+  color: var(--main-color);
+  border-color: var(--main-color);
+} 
+
+.contact-invitation .contact:hover {
+  background-color:  var(--main-color);
+  border-color: var(--main-color);
+  color: rgba(26, 25, 25);
+}
+
+#middle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--background) ;
+}
+
+.mid-content {
+  height: 90%;
+  width: 90%;
+  padding-top: 0%;
+}
+
+#about-me {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  background-color: var(--background);
+}
+#about-me h2 {
+  font-size: 2em;
+  font-weight: 700;
+}
+#about-me .info {
+  width: 95%;
+  margin-top: 20px;
+ margin-bottom: 180px;
+  flex: 5;
+  background-color:  var(--table-color) ;
+  box-shadow: 7px 7px 20px 3px rgba(250, 245, 245, 0.9);
+}
+.info .inner {
+  display: flex;
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%;
+  padding: 3em 3em;
+}
+
+.personal-list {
+  flex: 3;
+  font-size: 1.1em;
+  color: white;
+}
+
+.name{
+  color:var(--main-color);
+}
+.personal-text {
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+  padding-left: 1.5em;
+  border-left: 1px solid white;
+  font-size: 1.25em;
+  line-height: 1.75;
+  flex: 6;
+  color: white;
+}
+@media only screen and (max-width: 1000px) {
+  .info .inner {
+    flex-direction: column;
+    align-items: center;
+  }
+  .personal-text {
+    border: none;
+    border-top: 1px solid white;
+  }
+}
+
+#skills {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  background-color: var(--background);
+}
+#skills h2 {
+  font-size: 2em;
+  font-weight: 700;
+}
+#skills .skills-info {
+  width: 95%;
+  margin-top: 20px;
+  margin-bottom: 180px;
+  flex: 5;
+  background-color: var(--table-color) ;
+  box-shadow: 7px 7px 20px 3px rgba(250, 245, 245, 0.9);
+}
+.skills-info .skills-inner {
+  display: flex;
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%;
+  padding: 3em 3em;
+}
+
+.skills-list {
+  display: flex;
+  flex: 5;
+  font-size: 1.25em;
+  color: white;
+  line-height: 0.7;
+  flex-direction:column;
+  text-align: center;
+}
+
+.skills-text {
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+  border-left: 1px solid white;
+  font-size: 1.25em;
+  line-height: 0.7;
+  flex: 5;
+  color: white;
+  text-align: center;
+}
+
+.skills-type{
+  color:var( --main-color);
+}
+.skills-name{
+  color:white;
+}
+
+@media only screen and (max-width: 1000px) {
+  .skills-info .skills-inner {
+    flex-direction: column;
+    align-items: center;
+  }
+  .skills-text {
+    border: none;
+    border-top: 1px solid white;
+  }
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5em 0 0 0;
+  background-color: var(--background) ;
+}
+
+#contact {
+  display: flex;
+  box-shadow: 7px 7px 20px 3px rgba(0, 0, 0, 0.07);
+  height: 70%;
+  width: 80%;
+}
+.contact-left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 3;
+  background-color: rgb(66, 110, 1);
+  color: white;
+}
+.contact-left-content {
+  display: flex;
+  flex-direction: column;
+  height: 90%;
+  width: 90%;
+  padding-bottom: 15%;
+  padding-right: 15%;
+  box-sizing: border-box;
+  position: relative;
+}
+.contact-left-content::after {
+  content:"";
+  background: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 1px;
+  width: 40%;
+}
+.contact-left-content span {
+  display: block;
+  padding-top: 10%;
+  flex: 1;
+}
+.contact-left-content .text {
+  letter-spacing: 0.5px;
+  font-size: 1.1em;
+  line-height: 1.35;
+}
+.contact-left-content .address {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  flex: 4;
+  margin-top: 13em;
+}
+.contact-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 6;
+  background-color: var(--table-color);
+}
+.contact-right-content {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  height: 80%;
+  width: 80%;
+  padding-bottom: 10%;
+}
+.contact-right-content h1 {
+  display: block;
+  text-align: center;
+  color: var(--main-color);
+  margin-top: 0px;
+}
+.contact-right-content div {
+  flex: 1;
+  margin-top: 40px;
+}
+.contact-right-content input{
+  height: 90%;
+  font-size: 150%;
+  display: block;
+  width: 100%;
+  border: none;
+  border: 1px solid var(--main-color);
+  background-color: rgb(168, 168, 168);
+}
+.contact-right-content input::placeholder {
+  color: var(--table-color);
+}
+div.last {
+  display: flex;
+  align-items: flex-end;
+  flex: 5;
+}
+input.last {
+  height: 280%;
+}
+
+@media only screen and (max-width: 650px) {
+
+  #contact {
+    flex-direction: column-reverse;
+  }
+  .contact-left-content .address {
+    margin-top: 3em;
+    margin-bottom: 2em;
+  }
+  .contact-right-content h1 {
+    margin-top: 2em;
+  }
+  input.last {
+    margin-bottom: 2em;
+  }
+}
+
+h5{
+  display: flex;
+  color:white;
+  font-weight: 200;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 60px;
+  background: var(--background);
+  justify-content: center;
+  align-items: center;
+}
+
 
