--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 :root {
   --background: rgb(26, 25, 25);
   --background-nav: rgba(26, 25, 25, 0);
+  --input-background: rgb(168, 168, 168);
   --main-color: rgb(199, 243, 134);
   --table-color: rgb(51, 51, 49);
 }
@@ -31,7 +32,16 @@ header {
   z-index: 999;
   width: 100%;
 }
-
+/*poprawić*/
+.scrollup{
+  width: 64px;
+  height: 64px;
+  text-decoration: none;
+  background:  url("img/scrollup.png") no-repeat 0px 0px;
+  position: fixed;
+  right: 20px;
+  bottom: 30px;
+}
 .nav-toggle {
   position: absolute !important;
   top: -9999px !important;
@@ -391,8 +401,8 @@ footer {
 #contact {
   display: flex;
   box-shadow: 7px 7px 20px 3px rgba(0, 0, 0, 0.07);
-  height: 70%;
-  width: 80%;
+  height: 41rem;
+  width: 75%;
 }
 .contact-left {
   display: flex;
@@ -413,7 +423,6 @@ footer {
   position: relative;
 }
 .contact-left-content::after {
-  content:"";
   background: white;
   position: absolute;
   top: 0;
@@ -436,6 +445,7 @@ footer {
   flex-direction: column;
   justify-content: flex-end;
   flex: 4;
+  margin-bottom: 0;
   margin-top: 13em;
 }
 .contact-right {
@@ -466,15 +476,52 @@ footer {
 .contact-right-content input{
   height: 90%;
   font-size: 150%;
-  display: block;
-  width: 100%;
+  display: flex;
+  width: 95%;
+  margin-left: 2%;
   border: none;
   border: 1px solid var(--main-color);
-  background-color: rgb(168, 168, 168);
+  background-color: var(--input-background);
 }
-.contact-right-content input::placeholder {
-  color: var(--table-color);
+
+label{
+  display: inline-block;
+  text-align: center;
+  color: var(--main-color);
+  font-size: 1.5em;
+  margin: 2% 2%;
 }
+
+.message{
+  background-color: var(--input-background);
+  border: 1px solid var(--main-color);
+  font-size: 1.4em;
+  width: 95%;
+  margin-left: 2%;
+}
+
+.btn{
+  position: absolute;
+  margin-top: 32em;
+  margin-left: 15em;
+  background-color: var(--table-color);
+  color: var(--main-color);
+  font-weight: 600;
+  width: 9%;
+  text-align: center;
+  border: 1px solid var(--main-color);
+  font-size: 1rem;
+  line-height: 2;
+  border-radius: .25rem;
+}
+
+.btn:hover{
+  color: var(--main-color);
+  background-color: var(--input-background);
+  border: 1px solid var(--main-color);
+  cursor: pointer;
+}
+
 div.last {
   display: flex;
   align-items: flex-end;
