--- a/style.css
+++ b/style.css
@@ -32,60 +32,6 @@ header {
   z-index: 999;
   width: 100%;
 }
-/*poprawić*/
-.scrollup{
-  width: 64px;
-  height: 64px;
-  text-decoration: none;
-  background:  url("img/scrollup.png") no-repeat 0px 0px;
-  position: fixed;
-  right: 20px;
-  bottom: 30px;
-}
-.nav-toggle {
-  position: absolute !important;
-  top: -9999px !important;
-  left: -9999px !important;
-}
-
-.nav-toggle:focus ~ .nav-toggle-label {
-  outline: 3px solid rgba(lightblue, .75);
-}
-
-.nav-toggle-label {
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin-left: 1em;
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.nav-toggle-label span,
-.nav-toggle-label span::before,
-.nav-toggle-label span::after {
-  display: block;
-  background: white;
-  height: 2px;
-  width: 2em;
-  border-radius: 2px;
-  position: relative;
-}
-
-.nav-toggle-label span::before,
-.nav-toggle-label span::after {
-  content: '';
-  position: absolute;
-}
-
-.nav-toggle-label span::before {
-  bottom: 7px;
-}
-
-.nav-toggle-label span::after {
-  top: 7px;
-}
 
 nav {
   position: absolute;
@@ -174,7 +120,7 @@ nav a:hover {
   }
   
   nav li {
-    margin-left: 3em;
+    margin-left: 2em;
     margin-bottom: 0;
   }
   
@@ -196,17 +142,17 @@ nav a:hover {
     transition: transform ease-in-out 250ms;
   }
   
-  nav a:hover::before {
+nav a:hover::before {
     transform: scale(1,1);
   }
 }
 
 h2{
-    color: white;
-    font-size: 64px;
-    font-family: 'Asap', sans-serif;
-    font-weight: 400;
-    text-align: center;
+  color: white;
+  font-size: 64px;
+  font-family: 'Asap', sans-serif;
+  font-weight: 400;
+  text-align: center;
 }
 
 .contact-invitation {
@@ -221,7 +167,7 @@ h2{
   letter-spacing: 1px;
   color: white;
   margin-top: 0;
- padding-top: 10%;
+  padding-top: 10%;
 }
 .contact-invitation a {
   display: inline-block;
@@ -278,7 +224,7 @@ h2{
 #about-me .info {
   width: 95%;
   margin-top: 20px;
- margin-bottom: 180px;
+  margin-bottom: 180px;
   flex: 5;
   background-color:  var(--table-color) ;
   box-shadow: 7px 7px 20px 3px rgba(250, 245, 245, 0.9);
@@ -400,9 +346,9 @@ footer {
 
 #contact {
   display: flex;
-  box-shadow: 7px 7px 20px 3px rgba(0, 0, 0, 0.07);
-  height: 41rem;
+  height: 39.5rem;
   width: 75%;
+  margin-bottom: 1em;
 }
 .contact-left {
   display: flex;
@@ -443,11 +389,23 @@ footer {
 .contact-left-content .address {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
   flex: 4;
-  margin-bottom: 0;
-  margin-top: 13em;
+  justify-content: center;
 }
+
+.contact-left-content a{
+  margin-right: 4%;
+  font-size: 1.5em;
+}
+
+.contact-left-content a i{
+    text-align: right;
+    margin-left: .2em;
+    margin-right: .2em;
+    font-size: 2em;
+    color: white;
+}
+
 .contact-right {
   display: flex;
   justify-content: center;
@@ -459,9 +417,8 @@ footer {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  height: 80%;
+  height: 90%;
   width: 80%;
-  padding-bottom: 10%;
 }
 .contact-right-content h1 {
   display: block;
@@ -493,6 +450,7 @@ label{
 }
 
 .message{
+  display: flex;
   background-color: var(--input-background);
   border: 1px solid var(--main-color);
   font-size: 1.4em;
@@ -501,14 +459,12 @@ label{
 }
 
 .btn{
-  position: absolute;
-  margin-top: 32em;
-  margin-left: 15em;
+  margin-left: 16em;
+  margin-top: 1.8em;
   background-color: var(--table-color);
   color: var(--main-color);
   font-weight: 600;
-  width: 9%;
-  text-align: center;
+  width: 21%;
   border: 1px solid var(--main-color);
   font-size: 1rem;
   line-height: 2;
@@ -548,17 +504,5 @@ input.last {
   }
 }
 
-h5{
-  display: flex;
-  color:white;
-  font-weight: 200;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  height: 60px;
-  background: var(--background);
-  justify-content: center;
-  align-items: center;
-}
 
 
